<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_general_settings"
        android:title="@string/pref_general_title">

        <EditTextPreference
            android:defaultValue="@string/anony"
            android:inputType="text"
            android:key="display_name"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_display_name" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="nsfw_switch"
            android:summary="@string/pref_nsfw_summary"
            android:title="@string/pref_nsfw" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_key_about_settings"
        android:title="@string/pref_about_title">
        <Preference android:title="@string/pref_version"/>
        <Preference android:title="@string/pref_rate" >
            <intent android:action="android.intent.action.VIEW"
                android:data="market://details?id=com.v4ivstudio.whistler" />
        </Preference>
        <Preference android:title="@string/pref_v4iv_studio" />
    </PreferenceCategory>
</PreferenceScreen>